# stagentic-xdd

./: .gitignore  CLAUDE.md  COMMANDS.md  LICENSE  NEXT.md  README.md
.claude/: settings.json
.claude/hooks/: post_green_focused_mutmut_nudge.py  session_start_working_practices.sh
docs/: commit-style.md  document-style.md  working-practices.md  writing-style.md
docs/architecture/conventions/: spec-conventions.md  src-conventions.md  test-conventions.md
docs/architecture/decisions/: 0000-use-adrs-to-record-decisions.md  0001-drive-initial-development-from-the-tdab-prototype.md  0001-start-with-tdab-and-vanilla-pytest.md  0002-pin-claude-code-cli-version.md  0003-pin-model-versions.md  0004-structure-agent-control-with-guidance-guardrails-and-gateways.md  0005-periodic-cli-version-update-checking.md  0006-use-native-installer-for-pinned-cli.md  0007-structure-inner-loop-scenarios-as-a-task-chain-with-a-scorecard.md  0008-run-the-agent-with-cwd-at-the-workspace-root.md  0009-select-inspector-and-agent-per-run-via-pytest-cli-options.md  0010-adopt-mutation-testing-with-a-staged-rollout.md  0011-adopt-pyhamcrest-for-declarative-assertions.md  0012-adopt-path-source-packages-for-cross-project-code.md  0012-home-shared-test-utilities-in-a-dedicated-project.md  0013-agents-and-inspectors-return-a-result-value.md  0013-primitives-return-a-result-value.md  0014-separate-claude-jsonl-translation-from-the-transcriber.md  0015-capture-xdd-skill-missteps-as-coaching-records.md  0015-capture-xdd-skill-missteps-as-lessons.md  0016-trust-the-agent-workspace-for-headless-runs.md  0017-record-cli-version-and-model-in-the-run-transcript.md  0018-build-the-xdd-skill-as-a-corrective-skill.md  README.md  (+4 more)
docs/coaching/: TEMPLATE.md
docs/lessons/: README.md  TEMPLATE.md
experiments/agentic-screenplay-spike/: .gitignore  README.md  pyproject.toml  transcript_renderer.py
experiments/agentic-screenplay-spike/fixtures/skills/decisions-demo/: SKILL.md  decisions-demo.puml  weigh-options.puml
experiments/agentic-screenplay-spike/fixtures/skills/decisions-demo/direction/: prompts.md
experiments/agentic-screenplay-spike/fixtures/tasks/: run-decisions-demo-with-one-option.md  run-decisions-demo.md  skip-weighing-and-tell-the-user-the-choice-has-been-made.md  verify-transcript-contains-patterns.md
experiments/agentic-screenplay-spike/initial/: conftest.py  harness.py  stagentic_play.py  test_scenarios.py
experiments/agentic-screenplay-spike/screenplay/: conftest.py  pytest.ini
experiments/agentic-screenplay-spike/screenplay/decisions_demo-behave-spec/: bdd-run.py  behave.ini
experiments/agentic-screenplay-spike/screenplay/decisions_demo-behave-spec/behaviours/: environment.py
experiments/agentic-screenplay-spike/screenplay/decisions_demo-behave-spec/behaviours/steps/: decisions_demo_steps.py
experiments/agentic-screenplay-spike/screenplay/decisions_demo-spec/: conftest.py  steps.py  test_all.py
experiments/agentic-screenplay-spike/screenplay/decisions_demo-spec/behaviours/: get_help_choosing_between_options.ability
experiments/agentic-screenplay-spike/screenplay/expectations/: __init__.py  complete_its_workflow.py  the_right_answer_by_skipping_weighing.py
experiments/agentic-screenplay-spike/screenplay/screenplay_core/: __init__.py  screenplay.py
experiments/agentic-screenplay-spike/screenplay/stagentic_play/: __init__.py  agent.py  auditor.py  claude_cli.py  verification.py
experiments/agentic-screenplay-spike/screenplay/tasks/: __init__.py  run_decisions_demo_with_one_option.py  seek_help_deciding.py
experiments/agentic-screenplay-spike/screenplay/tests/: test_scenarios.py
experiments/agentic-screenplay-spike/screenplay/tests/fixtures/: artefacts_dir.py  config.py  decision_support_agent.py  inspector.py  paths.py  stubbed_agent.py
play/: pyproject.toml
play/src/: agent.py  archiver.py  auditor.py  claude_cli.py  claude_jsonl_path.py  claude_session.py  claude_transcriber.py  critic.py  fake_agent.py  inspector.py  new_agent.py  new_critic.py  raise_if.py  raise_when.py  result.py  result_matchers.py  scorecard.py  scorecard_json_extraction.py  scorecard_result.py  scorecard_results.py  transcriber.py
play/tests/: conftest.py  matchers.py  test_agent.py  test_archiver.py  test_auditor.py  test_claude_cli.py  test_claude_jsonl_path.py  test_claude_session.py  test_claude_transcriber.py  test_critic.py  test_failure_message.py  test_fake_agent.py  test_matchers.py  test_new_agent.py  test_new_critic.py  test_raise_if.py  test_raise_when.py  test_result.py  test_result_matchers.py  test_scorecard.py  test_scorecard_json_extraction.py  test_scorecard_results.py  test_transcriber.py
play/tests/contract/: test_claude_cli.py
play/tests/fixtures/: sample-critique.jsonl  sample-critique.md  sample-transcript.jsonl  sample-transcript.md  varied-transcript.jsonl  varied-transcript.md
play/tests/integration/: test_critic_integration.py
play/tests/test_doubles/: spy_interrogation.py  stubbed_claude_cli.py  stubbed_subprocess.py
scripts/: fisher.sh  run-alternating-experiment.sh  run-recurrence-batch.sh  run-repeated-batches.sh  tally-recurrence-batch.sh
spec/: archiver.py  conftest.py  pyproject.toml
spec/tasks/1-first-test-for-miles-to-km-converter/: TASK.md  fake-task.sh
spec/tasks/1-first-test-for-miles-to-km-converter/scene/: transcript.md
spec/tasks/1-first-test-for-miles-to-km-converter/scene/.claude/: settings.json
spec/tasks/1-first-test-for-miles-to-km-converter/scene/src/: conversion.py
spec/tasks/2-make-the-failing-test-pass/: TASK.md
spec/tasks/2-make-the-failing-test-pass/scene/src/: conversion.py
spec/tests/: test_a_new_test_for_new_code_drives_creation_of_the_code_it_calls.py  test_archiver.py  test_bootstrap.py  test_conftest.py  test_red_green_commit.py  test_red_green_into_refactor.py
stagentic-test/: pyproject.toml
stagentic-test/tests/: test_cases.py
test_utilities/: pyproject.toml
test_utilities/src/: cases.py  matchers.py
test_utilities/tests/: test_cases.py  test_matchers.py
xdd-plugin/.claude-plugin/: plugin.json
(+84 files in other folders)
