[project]
name = "play"
version = "0.0.0"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
markers = [
    "contract: tests that call the real claude CLI (slow, require claude to be installed)",
]
