[project]
name = "play"
version = "0.0.0"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.9",
]

[tool.uv]
package = false

[tool.ruff]
preview = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "N802",  # test names may embed exception type names (e.g. ValueError) in uppercase for readability
]

[tool.ruff.lint]
extend-select = [
    "E3",  # blank-line rules
    "I",   # import sorting
    "N",   # PEP 8 naming conventions
    "UP",  # pyupgrade — modernise Python syntax
    "W",   # pycodestyle warnings (trailing whitespace, etc.)
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
markers = [
    "contract: tests that call the real claude CLI (slow, require claude to be installed)",
]
