[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "play"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "pyhamcrest>=2.1.0",
]

[dependency-groups]
dev = [
    "mutmut>=3.6",
    "pytest>=9.0.3",
    "ruff>=0.9",
    "test_utilities",
]

[tool.uv.sources]
test_utilities = { path = "../test_utilities", editable = true }

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.ruff]
preview = true
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "N802",  # test names may embed exception type names (e.g. ValueError) in uppercase for readability
]

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear — common gotchas and design issues
    "FURB",# refurb — unidiomatic Python with cleaner modern equivalents
    "C4",  # flake8-comprehensions — prefer comprehensions over equivalent calls
    "E3",  # blank-line rules
    "I",   # import sorting
    "N",   # PEP 8 naming conventions
    "PTH", # flake8-use-pathlib — prefer pathlib over os.path
    "SIM", # flake8-simplify — simplifiable code
    "UP",  # pyupgrade — modernise Python syntax
    "W",   # pycodestyle warnings (trailing whitespace, etc.)
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
markers = [
    "contract: tests that call the real claude CLI (slow, require claude to be installed)",
    "integration: tests that exercise the full critic with a real claude CLI (slow)",
]

[tool.mutmut]
source_paths = ["src/critic.py", "src/agent.py", "src/result.py", "src/fake_agent.py", "src/result_matchers.py", "src/auditor.py", "src/claude_cli.py", "src/claude_session.py", "src/scorecard_results.py"]
also_copy = ["src/"]
pytest_add_cli_args_test_selection = ["-m", "not contract and not integration"]
