[project]
name = "xdd-spec"
version = "0.1.0"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.9",
]

[tool.ruff]
preview = true
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "N802",  # test names may embed exception type names (e.g. ValueError) in uppercase for readability
]

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear — common gotchas and design issues
    "E3",  # blank-line rules
    "I",   # import sorting
    "N",   # PEP 8 naming conventions
    "UP",  # pyupgrade — modernise Python syntax
    "W",   # pycodestyle warnings (trailing whitespace, etc.)
]

[tool.pytest.ini_options]
pythonpath = ["../play/src"]
