[project]
name = "xdd-spec"
version = "0.1.0"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "pyhamcrest>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.9",
    "play",
]

[tool.uv]
package = false

[tool.uv.sources]
play = { path = "../play", editable = true }

[tool.ruff]
preview = true
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "N802",  # test names may embed exception type names (e.g. ValueError) in uppercase for readability
]

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear — common gotchas and design issues
    "FURB",# refurb — unidiomatic Python with cleaner modern equivalents
    "C4",  # flake8-comprehensions — prefer comprehensions over equivalent calls
    "E3",  # blank-line rules
    "I",   # import sorting
    "N",   # PEP 8 naming conventions
    "PTH", # flake8-use-pathlib — prefer pathlib over os.path
    "SIM", # flake8-simplify — simplifiable code
    "UP",  # pyupgrade — modernise Python syntax
    "W",   # pycodestyle warnings (trailing whitespace, etc.)
]

[tool.pytest.ini_options]
pythonpath = ["."]
